<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="account">account</string>
    <string name="acra_report_toast">Sorry, the application crashed. An anonymous bug report will be sent to the developers</string>
    <string name="action_add_to_bookmarks">Set watch status</string>
    <string name="action_open_play">@string/home_play</string>
    <string name="action_open_watching">More Info</string>
    <string name="action_remove_from_bookmarks">Remove</string>
    <string name="action_remove_watching">Remove</string>
    <string name="active_code_btn">Active Code</string>
    <string name="active_fail">Sorry! Your Activation Code invalid. Please check your email to get the code</string>
    <string name="add_site_pref">Add site</string>
    <string name="add_site_summary">Add a clone of an existing site, with a different url</string>
    <string name="advanced_search">Advanced Search</string>
    <string name="advanced_search_des">Gives you the search results separated by provider</string>
    <string name="app_language">App Language</string>
    <string name="app_layout">App Layout</string>
    <string name="app_layout_key">app_layout_key</string>
    <string name="app_theme_key">app_theme_key</string>
    <string name="app_theme_settings">App theme</string>
    <string name="app_version">5.6.84</string>
    <string name="auto_update_key">auto_update</string>
    <string name="backup_key">backup_key</string>
    <string name="backup_settings">Backup data</string>
    <string name="benene">Give a benene to the devs</string>
    <string name="benene_count">benene_count</string>
    <string name="benene_des">Given benene</string>
    <string name="bottom_title_key">bottom_title_key</string>
    <string name="bottom_title_settings">Poster title location</string>
    <string name="bottom_title_settings_des">Put the title under the poster</string>
    <string name="bug_report_settings_off">Only sends data on crashes</string>
    <string name="bug_report_settings_on">Sends no data</string>
    <string name="check_for_update">Check for Update</string>
    <string name="chromecast_subtitles_settings">Chromecast Subtitles</string>
    <string name="chromecast_subtitles_settings_des">Chromecast subtitles settings</string>
    <string name="discord">Join Discord</string>
    <string name="display_sub_key">display_sub_key</string>
    <string name="display_subbed_dubbed_settings">Display Dubbed/Subbed Anime</string>
    <string name="dns_key">dns_key</string>
    <string name="dns_pref">DNS over HTTPS</string>
    <string name="dns_pref_summary">Useful for bypassing ISP blocks</string>
    <string name="double_tap_enabled_key">double_tap_enabled_key</string>
    <string name="double_tap_pause_enabled_key">double_tap_pause_enabled_key</string>
    <string name="double_tap_seek_time_key">double_tap_seek_time_key</string>
    <string name="double_tap_to_pause_settings">Double tap to pause</string>
    <string name="double_tap_to_pause_settings_des">Tap in the middle to pause</string>
    <string name="double_tap_to_seek_amount_settings">Player seek amount</string>
    <string name="double_tap_to_seek_settings">Double tap to seek</string>
    <string name="double_tap_to_seek_settings_des">Tap twice on the right or left side to seek forwards or backwards</string>
    <string name="download_path_key">download_path_key</string>
    <string name="download_path_pref">Download path</string>
    <string name="eigengraumode_settings">Eigengravy Mode</string>
    <string name="eigengraumode_settings_des">Adds a speed option in the player</string>
    <string name="episode_sync_enabled_key">episode_sync_enabled_key</string>
    <string name="episode_sync_settings">Update watch progress</string>
    <string name="episode_sync_settings_des">Automatically sync your current episode progress</string>
    <string name="github">Github</string>
    <string name="killswitch_key">killswitch_key</string>
    <string name="killswitch_settings">Download latest metadata from github</string>
    <string name="killswitch_settings_des">If you want access to all providers (even broken ones) turn this off</string>
    <string name="legal_notice">Disclaimer</string>
    <string name="legal_notice_key">legal_notice_key</string>
    <string name="lightnovel">Light novel app by the same devs</string>
    <string name="limit_title">Video player title max chars</string>
    <string name="limit_title_rez">Video player resolution</string>
    <string name="locale_key">app_locale</string>
    <string name="manual_check_update_key">manual_check_update</string>
    <string name="override_site_key">override_site_key</string>
    <string name="picture_in_picture">Picture-in-picture</string>
    <string name="picture_in_picture_des">Continues playback in a miniature player on top of other apps</string>
    <string name="pip_enabled_key">pip_enabled_key</string>
    <string name="playback_speed_enabled_key">playback_speed_enabled_key</string>
    <string name="player_resize_enabled_key">player_resize_enabled_key</string>
    <string name="player_size_settings">Player resize button</string>
    <string name="player_size_settings_des">Remove the black borders</string>
    <string name="player_subtitles_settings">Subtitles</string>
    <string name="player_subtitles_settings_des">Player subtitles settings</string>
    <string name="poster_ui_key">poster_ui_key</string>
    <string name="poster_ui_settings">Toggle UI elements on poster</string>
    <string name="pref_disable_acra">Disable automatic bug reporting</string>
    <string name="prefer_limit_title_key">prefer_limit_title_key</string>
    <string name="prefer_limit_title_rez_key">prefer_limit_title_rez_key</string>
    <string name="prefer_media_type_key">prefer_media_type_key</string>
    <string name="preferred_media_settings">Preferred media</string>
    <string name="prerelease_update_key">prerelease_update</string>
    <string name="preview_background_img_des">Preview Background</string>
    <string name="primary_color_key">primary_color_key</string>
    <string name="primary_color_settings">Primary color</string>
    <string name="provider_lang_key">provider_lang_key</string>
    <string name="provider_lang_settings">Provider languages</string>
    <string name="quality_pref_key">quality_pref_key</string>
    <string name="random_button_key">random_button_key</string>
    <string name="random_button_settings">Random Button</string>
    <string name="random_button_settings_desc">Show random button on Homepage</string>
    <string name="restore_key">restore_key</string>
    <string name="restore_settings">Restore data from backup</string>
    <string name="show_fillers_key">show_fillers_key</string>
    <string name="show_fillers_settings">Show filler episode for anime</string>
    <string name="show_log_cat">Show logcat 🐈</string>
    <string name="show_logcat_key">show_logcat_key</string>
    <string name="show_trailers_key">show_trailers_key</string>
    <string name="show_trailers_settings">Show trailers</string>
    <string name="sort_apply">Apply</string>
    <string name="sort_cancel">Cancel</string>
    <string name="subs_auto_select_language">Auto-Select Language</string>
    <string name="subs_background_color">Background Color</string>
    <string name="subs_download_languages">Download Languages</string>
    <string name="subs_edge_type">Edge Type</string>
    <string name="subs_font">Font</string>
    <string name="subs_font_size">Font Size</string>
    <string name="subs_hold_to_reset_to_default">Hold to reset to default</string>
    <string name="subs_import_text">Import fonts by placing them in %s</string>
    <string name="subs_outline_color">Outline Color</string>
    <string name="subs_subtitle_elevation">Subtitle Elevation</string>
    <string name="subs_text_color">Text Color</string>
    <string name="subs_window_color">Window Color</string>
    <string name="subtitle_settings_chromecast_key">subtitle_settings_chromecast_key</string>
    <string name="subtitle_settings_key">subtitle_settings_key</string>
    <string name="subtitles_remove_bloat">Remove bloat from subtitles</string>
    <string name="subtitles_remove_captions">Remove closed captions from subtitles</string>
    <string name="subtitles_settings">Subtitle Settings</string>
    <string name="swipe_enabled_key">swipe_enabled_key</string>
    <string name="swipe_to_change_settings">Swipe to change settings</string>
    <string name="swipe_to_change_settings_des">Swipe on the left or right side to change brightness or volume</string>
    <string name="swipe_to_seek_settings">Swipe to seek</string>
    <string name="swipe_to_seek_settings_des">Swipe left or right to control time in the videoplayer</string>
    <string name="swipe_vertical_enabled_key">swipe_vertical_enabled_key</string>
    <string name="updates_settings">Show app updates</string>
    <string name="updates_settings_des">Automatically search for new updates on start</string>
    <string name="uprereleases_settings">Update to prereleases</string>
    <string name="uprereleases_settings_des">Search for prerelease updates instead of full releases only</string>
    <string name="video_buffer_clear_key">video_buffer_clear_key</string>
    <string name="video_buffer_clear_settings">Clear video and image cache</string>
    <string name="video_buffer_disk_key">video_buffer_disk_key</string>
    <string name="video_buffer_disk_settings">Video cache on disk</string>
    <string name="video_buffer_length_key">video_buffer_length_key</string>
    <string name="video_buffer_length_settings">Video buffer length</string>
    <string name="video_buffer_size_key">video_buffer_size_key</string>
    <string name="video_buffer_size_settings">Video buffer size</string>
    <string name="video_disk_description">May cause problems on systems with low storage space such as Android TV devices if you set it too high</string>
    <string name="video_ram_description">"Will cause random crashes if set too high. Don't change if you have a low amount of ram such as an Android TV or old phone"</string>
    <string name="watch_quality_pref">Preferred watch quality</string>
</resources>