<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <Preference android:title="@string/check_for_update" app:icon="@drawable/ic_baseline_system_update_24" app:key="@string/manual_check_update_key" app:summary="@string/app_version" />
    <Preference android:icon="@drawable/baseline_save_as_24" android:title="@string/backup_settings" android:key="@string/backup_key" />
    <Preference android:icon="@drawable/baseline_restore_page_24" android:title="@string/restore_settings" android:key="@string/restore_key" />
    <Preference android:icon="@drawable/baseline_description_24" android:title="@string/show_log_cat" android:key="@string/show_logcat_key" app:isPreferenceVisible="false" />
    <SwitchPreference android:icon="@drawable/ic_baseline_bug_report_24" android:title="@string/pref_disable_acra" android:key="acra.disable" android:defaultValue="false" android:summaryOn="@string/bug_report_settings_on" android:summaryOff="@string/bug_report_settings_off" app:isPreferenceVisible="false" />
    <SwitchPreference android:icon="@drawable/ic_baseline_notifications_active_24" android:title="@string/updates_settings" android:summary="@string/updates_settings_des" app:defaultValue="true" app:key="@string/auto_update_key" />
    <SwitchPreference android:icon="@drawable/ic_baseline_developer_mode_24" android:title="@string/uprereleases_settings" android:summary="@string/uprereleases_settings_des" app:defaultValue="false" app:isPreferenceVisible="false" app:key="@string/prerelease_update_key" />
    <SwitchPreference android:icon="@drawable/netflix_download" android:title="@string/killswitch_settings" android:key="@string/killswitch_key" android:summary="@string/killswitch_settings_des" android:defaultValue="true" app:isPreferenceVisible="false" />
</PreferenceScreen>